# 2023Robocon

./: .gitignore  CMakeLists.txt  README.en.md  README.md
script/: autorun.sh  run.sh
src/: CMakeLists.txt
src/cv/: CMakeLists.txt
src/cv/modeJson/: custom.json  imu.json  shortRange.json
src/cv/src/: act_L515.cpp  act_L515.h  main.cpp
src/lidarForPosition/: CMakeLists.txt  README.md
src/lidarForPosition/src/: data.cpp  data.h  main.cpp  map.cpp  map.h  pos.cpp  pos.h  pps.cpp  pps.h  serial.cpp  serial.h
src/motion_control/: CMakeLists.txt
src/motion_control/Action_User/: balance.c  balance.h  can.c  can.h  driver.c  driver.h  includes.h  moveBase.c  moveBase.h  path.c  path.h  robot.c  robot.h  task.c  task.h
src/motion_control/MotionCard/: Bspline.c  Bspline.h  MotionCard.h  Move.c  Move.h  SpeedPlaning.c  SpeedPlaning.h  calculate.c  calculate.h  pathFollowing.c  pathFollowing.h  posSystem.c  posSystem.h  ringbuffer.c  ringbuffer.h
src/motion_control/src/: ControlSPI.h  ErrorType.h  cv.c  cv.h  gpio.c  gpio.h  main.c  mcucomm.c  mcucomm.h  own_serial.cpp  own_serial.h  pps.c  pps.h  spi_init.c  spi_init.h  timer.c  timer.h
wrappers/: CMakeLists.txt
wrappers/process_communication/: CMakeLists.txt  README.md  process_comm.c  process_comm.h
